implement products functionality and tests
